--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #228587;
     color:rgb(0, 0, 0);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-image: url("/images/Background-Pattern.png");
 }
 
 /*Modification for the name  */
