--- a/assets/style.css
+++ b/assets/style.css
@@ -46,19 +46,25 @@ section{
 .ParaText{
     size: 35px;
 }
-footer {
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: grey;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-    font-size: 10px;
-}
 
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
   }
+
+  .portImg{
+      height: 350px;
+      width: 350px;
+  }
+
+  footer {
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: grey;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    font-size: 10px;
+}
