--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,6 @@ section{
     margin-bottom: 75px;
     padding: 25px;
 
-
 }
 
 #sectiontitle{
@@ -39,11 +38,13 @@ section{
 }
 
 #image1{
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
+  
 }
 
 .ParaText{
+
     size: 35px;
 }
 
@@ -56,8 +57,10 @@ section{
   .portImg{
       height: 350px;
       width: 350px;
+      padding: 15px;
   }
 
+  /* footer formating */
   footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -66,5 +69,7 @@ section{
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+    border-top:5px solid teal ;
     font-size: 10px;
+    text-align: center;
 }
