--- a/assets/style.css
+++ b/assets/style.css
@@ -8,34 +8,23 @@ body {
     font-size: 15px;
 }
 
-/*Modification for the name  */
-h1{
-    background-color: cadetblue;
-    color: white;
-    align-items: center;
-
-}
 /*for nav bar */
 nav{
     background-color:#ffffff;
     color: #ffffff; 
-}
-
+} 
 .navbar-brand{
     background-color: teal;
-    color: #ffffff;
 }
 
-
-
+/*section desgin*/
 section{
     background-color: #ffffff;
     margin-top: 75px;
     margin-bottom: 75px;
-    padding: 25px;
-
+    padding: 20px;
 }
-
+/*Standard title scheme for all pages*/
 #sectiontitle{
     font-size: 50px;
     color: teal;
@@ -43,17 +32,24 @@ section{
     border-bottom: 2px solid grey;
 }
 
+/*Picture on about page*/
 #image1{
     height: 200px;
     width: 200px;
-   
-  
+    float: left;
+    margin: 10px;
+    padding-left: 10px;  
+    clear: both; 
 }
 
-article{
-    padding-top: 15px;
 
+/*all text in about me*/
+.ParaText{
+    border: 0px;
+    padding: 5px;
+    margin: 5px;
 }
+
 
 .clearfix::after {
     content: "";
@@ -62,10 +58,14 @@ article{
   }
 
   .portImg{
-      height: 350px;
-      width: 350px;
-      padding: 15px;
+      height: 250px;
+      width: 250px;
+      padding: 10px;
+      margin: 10px;
+      border: 1px solid black;
+      
   }
+  
 
   /* footer formating */
   footer {
@@ -80,24 +80,3 @@ article{
     font-size: 10px;
     text-align: center;
 }
-
-@media all and (max-width: 750px) {  
-    
-   body{
-        font-size: 8px; 
-    }
-    h1 {  
-        font-size: 15px;  
-    }
-
-    #image1{
-        height:75px;
-        width: 75px;
-    }
-    #sectiontitle{
-        font-size: 15px;
-    }
-
-
-    
-  }
