fixed image and download link

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,3 +79,9 @@ footer {
     font-size: 10px;
     text-align: center;
 }
+.download{
+    color: black;
+}
+.download:hover{
+    color: white;
+}
